==> timtimmahh/hoverboard-sideboard-hack-GD/Src/util.c <==
#include <stdio.h>
#include <string.h>
#include "systick.h"
#include "gd32f1x0.h"
#include "defines.h"
#include "config.h"
#include "setup.h"
#include "util.h"
#include "mpu6050.h"

void intro_demo_led(uint32_t tDelay)
{
	int i;

	for (i = 0; i < 3; i++) {
		gpio_bit_set(LED1_GPIO_Port, LED1_Pin);
		gpio_bit_reset(LED3_GPIO_Port, LED3_Pin);			
		delay_1ms(tDelay);
		gpio_bit_set(LED2_GPIO_Port, LED2_Pin);
		gpio_bit_reset(LED1_GPIO_Port, LED1_Pin);
		delay_1ms(tDelay);
		gpio_bit_set(LED3_GPIO_Port, LED3_Pin);
		gpio_bit_reset(LED2_GPIO_Port, LED2_Pin);
		delay_1ms(tDelay);
	}
	
	for (i = 0; i < 2; i++) {
		gpio_bit_set(LED1_GPIO_Port, LED1_Pin);
		gpio_bit_set(LED2_GPIO_Port, LED2_Pin);
		gpio_bit_set(LED3_GPIO_Port, LED3_Pin);
		gpio_bit_set(LED4_GPIO_Port, LED4_Pin);
		gpio_bit_set(LED5_GPIO_Port, LED5_Pin);
		delay_1ms(tDelay);
		gpio_bit_reset(LED1_GPIO_Port, LED1_Pin);
		gpio_bit_reset(LED2_GPIO_Port, LED2_Pin);
		gpio_bit_reset(LED3_GPIO_Port, LED3_Pin);
		gpio_bit_reset(LED4_GPIO_Port, LED4_Pin);
		gpio_bit_reset(LED5_GPIO_Port, LED5_Pin);
	}		
		
}

void input_init(void) {
	#ifdef SERIAL_CONTROL
		// usart_Tx_DMA_config(USART_MAIN, (uint8_t *)&Sideboard, sizeof(Sideboard));
		usart_Tx_DMA_config(USART_MAIN, (uint8_t*)&command, sizeof(command));
	#endif
	#if defined(SERIAL_DEBUG) || defined(SERIAL_FEEDBACK)
		usart_Rx_DMA_config(USART_MAIN, (uint8_t *)rx_buffer, sizeof(rx_buffer));
	#endif

	intro_demo_led(100);								// Short LEDs intro demo with 100 ms delay. This also gives some time for the MPU-6050 to power-up.	

	#ifdef MPU_SENSOR_ENABLE
		if(mpu_config()) { 								// IMU MPU-6050 config
			mpuStatus = ERROR;
			gpio_bit_set(LED1_GPIO_Port, LED1_Pin);		// Turn on RED LED
		}
		else {
			mpuStatus = SUCCESS;
			gpio_bit_set(LED2_GPIO_Port, LED2_Pin);		// Turn on GREEN LED
		}
		mpu_handle_input('h'); 							// Print the User Help commands to serial
	#else
		gpio_bit_set(LED2_GPIO_Port, LED2_Pin);			// Turn on GREEN LED
	#endif
}

void usart_process_data(SerialFeedback *Feedback_in, SerialFeedback *Feedback_out)
{	
	uint16_t checksum;
	if (Feedback_in->start == SERIAL_START_FRAME) {
		checksum = (uint16_t)(Feedback_in->start ^ Feedback_in->cmd1 ^ Feedback_in->cmd2 ^ Feedback_in->speedR_meas ^ Feedback_in->speedL_meas
							^ Feedback_in->batVoltage ^ Feedback_in->boardTemp ^ Feedback_in->cmdLed);
		if (Feedback_in->checksum == checksum) {					
			*Feedback_out = *Feedback_in;
			timeoutCntSerial  = 0;		// Reset timeout counter
			timeoutFlagSerial = 0; 		// Clear timeout flag
		}
	}
}

int8_t i2c_writeBytes(uint8_t slaveAddr, uint8_t regAddr, uint8_t length, uint8_t *data)
{	
	
	// assign WRITE command
	i2c_ReadWriteCmd 	= WRITE;			
	
	// assign inputs	
	i2c_status 			= -1;
	i2c_slaveAddress 	= slaveAddr << 1;		// Address is shifted one position to the left. LSB is reserved for the Read/Write bit.
	i2c_regAddress 		= regAddr;	
	i2c_txbuffer 		= data;
	i2c_nDABytes 		= length;
	i2c_nRABytes 		= 1;
	
	// enable the I2C0 interrupt
	i2c_interrupt_enable(MPU_I2C, I2C_INT_ERR | I2C_INT_BUF | I2C_INT_EV);

	// the master waits until the I2C bus is idle
	while(i2c_flag_get(MPU_I2C, I2C_FLAG_I2CBSY));

	// the master sends a start condition to I2C bus
	i2c_start_on_bus(MPU_I2C);

	// Wait until all data bytes are sent/received
	while(i2c_nDABytes > 0);
	
	return i2c_status;
	
}

int8_t i2c_readBytes(uint8_t slaveAddr, uint8_t regAddr, uint8_t length, uint8_t *data) 
{
	
	// assign READ command
	i2c_ReadWriteCmd 	= READ;
	
	// assign inputs
	i2c_status 			= -1;
	i2c_slaveAddress 	= slaveAddr << 1; 	// Address is shifted one position to the left. LSB is reserved for the Read/Write bit.
	i2c_regAddress 		= regAddr;
	i2c_rxbuffer 		= data;
	i2c_nDABytes 		= length;
	i2c_nRABytes 		= 1;   
    
	// enable the I2C0 interrupt
	i2c_interrupt_enable(MPU_I2C, I2C_INT_ERR | I2C_INT_BUF | I2C_INT_EV);

	if(2 == i2c_nDABytes){			
			i2c_ackpos_config(MPU_I2C, I2C_ACKPOS_NEXT);			// send ACK for the next byte
	}
	
	// the master waits until the I2C bus is idle
	while(i2c_flag_get(MPU_I2C, I2C_FLAG_I2CBSY));
	
	// the master sends a start condition to I2C bus
	i2c_start_on_bus(MPU_I2C);
	
	// Wait until all data bytes are sent/received
	while(i2c_nDABytes > 0);
	
	// Return status
	return i2c_status;
	
}
